# ros-path-planning-and-benchmark

./: .gitignore  README.md  extracted_text.txt  requirements.txt  setup.sh
docker/noetic/: Dockerfile  docker_entrypoint.sh
docs/: IMPLEMENTATION.md  algorithm_parameters.md  benchmark.md  configuration.md  history.md  research_summary.md
results/seed_15257/merges/: final_summary_seed_15257.csv
scripts/: analyze_results.py  benchmark_worker.sh  build.sh  cleanup_processes.sh  generate_pedestrian_config.py  generate_random_poses.py  launch_simulator.sh  monitor.sh  parallel_runner.sh  prepare_paper_results.py  process_results.py  run_battery.sh  run_benchmark.sh  run_fix_evaluation.sh  test_resume.sh
src/core/common/src/geometry/: collision_checker.cpp
src/core/path_planner/path_planner/: CMakeLists.txt
src/core/path_planner/path_planner/include/path_planner/: path_planner.h
src/core/path_planner/path_planner/include/path_planner/graph_planner/: dstar_lite_planner.h  (+1 more)
src/core/path_planner/path_planner/src/graph_planner/: astar_planner.cpp  dstar_lite_planner.cpp  lazy_theta_star_planner.cpp  lpa_star_planner.cpp  theta_star_planner.cpp
src/core/system_config/: CMakeLists.txt
src/core/system_config/system_config/: system_config.pb.txt
src/plannie-main/: CMakeLists.txt  benchmark_manager.py  package.xml
src/plannie-main/launch/: benchmark.launch
src/plugins/dynamic_xml_config/: main_generate.py
src/sim_env/config/costmap/: global_costmap_params.yaml  local_costmap_params.yaml
src/sim_env/launch/: config.launch  main.launch
src/sim_env/launch/include/robots/: start_robots.launch.xml
src/user_config/: user_config.yaml
(+2 files in other folders)
